--- a/style.css
+++ b/style.css
@@ -457,6 +457,10 @@ a:hover {
         padding-top: 65px !important;
     }
 
+    html, body {
+        overflow-x: hidden; 
+    }
+
     svg {
         transform: scale(0.75);
     }
