--- a/style.css
+++ b/style.css
@@ -490,8 +490,10 @@ a:hover {
     .navbar {
         padding: 0;
         margin-left: -30px;
+    }
+
+    #toggler {
         margin-right: -20px;
-        overflow-x: hidden;
     }
 
     .navbar-nav {
