project icons animation, js update, laptop navbar margin changed

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ a:hover {
 }
 
 .card-title {
+    cursor: text;
     font-size: 2rem;
     font-weight: bold;
     color: #ffffff;
@@ -220,6 +221,7 @@ a:hover {
 
 .card-footer {
     display: none;
+    cursor: text;
     background-color: #151515;
 }
 
@@ -293,8 +295,11 @@ a:hover {
 }
 
 .nav-hidden {
-    /* background-color: transparent; */
     transform: translateY(-110px);
+}
+
+.i-shake {
+    animation: 0.25s shake infinite;
 }
 
 /* position */
@@ -557,6 +562,7 @@ a:hover {
     }
     
     .navbar {
+        padding: 0;
         margin-left: -5px;
         margin-right: -10px;
     }
@@ -593,6 +599,7 @@ a:hover {
     }
 
     .card-caption {
+        cursor: text;
         font-size: 1.2rem;
     }
 
@@ -603,7 +610,12 @@ a:hover {
 }
 
 @media (min-width: 992px) {
+    #logo {
+        margin-top: -5px;
+    }
+
     .navbar {
+        padding-bottom: 8px;
         margin: 0;
     }
 
@@ -785,4 +797,12 @@ a:hover {
         opacity: 1;
         transform: none;
     }
+}
+
+@keyframes shake {
+    0% { transform: translate(0, 0) rotate(0deg); }
+    25% { transform: translate(5px, 5px) rotate(5deg); }
+    50% { transform: translate(0, 0) rotate(0eg); }
+    75% { transform: translate(-5px, 5px) rotate(-5deg); }
+    100% { transform: translate(0, 0) rotate(0deg); }
 }
