title font weight

--- a/style.css
+++ b/style.css
@@ -355,10 +355,12 @@ a:hover {
 
 #first-1 {
     color: #faf8f8e8;
+    font-weight: bold;
 }
 
 #first-2 {
     color: #faf8f8b4;
+    font-weight: bold;
 }
 
 #about {
